--- a/sources/ca/docker-compose.yml
+++ b/sources/ca/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   controller_application:
-    image: shawn011/controller-application:${branch}
+    image: docker.io/shawn011/controller-application:${branch}
     network_mode: host
     restart: always
     devices:
